# emberlite

./: .gitignore  CMakeLists.txt  Kconfig  README.md  openember
apps/: Kconfig
apps/examples/: CMakeLists.txt  uart_echo.c  uart_term.c
cmake/: Dependencies.cmake  OpenEmberThirdPartyBundleDefaults.cmake
components/: Kconfig
components/crypto/: CMakeLists.txt
components/crypto/include/ember/: crypto.h  crypto_crc.h  crypto_md5.h  crypto_sha256.h
components/crypto/src/: crc.c  md5.c  sha256.c
docs/: architecture-review-v0.0.1.md  architecture.md  build.md  ember-cli.md  hal.md  third-party-management.md
platform/: Kconfig
platform/hal/: CMakeLists.txt
platform/hal/include/hal/: hal.h  hal_adc.h  hal_can.h  hal_gpio.h  hal_i2c.h  hal_i2s.h  hal_input.h  hal_onewire.h  hal_pwm.h  hal_spi.h  hal_system.h  hal_uart.h  hal_usb.h
platform/hal/src/: hal.c  hal_adc.c  hal_can.c  hal_gpio.c  hal_i2c.c  hal_i2s.c  hal_input.c  hal_onewire.c  hal_pwm.c  hal_spi.c  hal_system.c  hal_uart.c  hal_usb.c
scripts/completions/: ember.bash
scripts/kconfig/: genconfig.sh  menuconfig.sh
